@@ -2,16 +2,15 @@ Package: mcmcplots
 Type: Package
 Title: Create Plots from MCMC Output
 Version: 0.4.2
-Date: 2010-01-12
+Date: 2014-11-16
 Authors@R: c(
 	  person("S. McKay", "Curtis", role=c("aut", "cre"), email="s.mckay.curtis@gmail.com"),
 	  person("Ilya", "Goldin", role="ctb"),
 	  person("Evangelos", "Evangelou", role="ctb")
 	  )
-Author: S. McKay Curtis with contributions from Ilya Goldin and Evangelos Evangelou
+Author: S. McKay Curtis with contributions from Ilya Goldin, Evangelos Evangelou, and "sumtxt" (GitHub user)
 Maintainer: S. McKay Curtis <s.mckay.curtis@gmail.com>
-Depends: coda
-Imports: sfsmisc, colorspace, denstrip
+Imports: coda, sfsmisc, colorspace, denstrip
 Suggests: R2WinBUGS
 Description: MCMC plots
 License: GPL (>=2)
