@@ -1,4 +1,5 @@
 exportPattern("^[^\\.]")
+import(coda)
 importFrom(sfsmisc, mult.fig)
 importFrom(colorspace, sequential_hcl, rainbow_hcl)
 importFrom(denstrip, denstrip)
