@@ -32,8 +32,8 @@
 outmcmc <- as.mcmc(schools.sim)
 
 ## Gelman Rubin diagnostics
-coda:::gelman.diag(outmcmc)
-coda:::mcmc.plot(outmcmc)
+:gelman.diag(outmcmc)
+:mcmc.plot(outmcmc)
 }
 }
 
