@@ -71,7 +71,7 @@ mcmcplot(schools.sim)
 nc <- 10; nr <- 1000
 pnames <- c(paste("alpha[", 1:5, "]", sep=""), paste("gamma[", 1:5, "]", sep=""))
 means <- rpois(10, 20)
-fakemcmc <- as.mcmc.list(lapply(1:3, function(i) mcmc(matrix(rnorm(nc*nr, rep(means,each=nr)), nrow=nr, dimnames=list(NULL,pnames)))))
+fakemcmc <- coda::as.mcmc.list(lapply(1:3, function(i) coda::mcmc(matrix(rnorm(nc*nr, rep(means,each=nr)), nrow=nr, dimnames=list(NULL,pnames)))))
 
 ## Use mcmcplot to plot
 ## the fake MCMC output
@@ -115,7 +115,7 @@ caterplot(fakemcmc, "gamma", labels.loc="above", col="red", denstrip=TRUE)
 
 ## Use denoverplot to create overlaying density plots
 ## of all parameters in fake MCMC data
-fakemcmc2 <- as.mcmc.list(lapply(1:3, function(i) mcmc(matrix(rnorm(nc*nr, rep(means, each=nr)), nrow=nr, dimnames=list(NULL,pnames)))))
+fakemcmc2 <- coda::as.mcmc.list(lapply(1:3, function(i) coda::mcmc(matrix(rnorm(nc*nr, rep(means, each=nr)), nrow=nr, dimnames=list(NULL,pnames)))))
 denoverplot(fakemcmc, fakemcmc2)
 
 ## Use corplot to create a "heat plot" of a
